[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/web_pages/editor/WebPageEntryEditor.gd" type="Script" id=1]

[node name="Entry" type="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 20.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="PC" type="PanelContainer" parent="."]
margin_right = 1024.0
margin_bottom = 60.0

[node name="VBC" type="VBoxContainer" parent="PC"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 53.0

[node name="TopBar" type="HBoxContainer" parent="PC/VBC"]
margin_right = 1010.0
margin_bottom = 20.0

[node name="EntryTypeLabel" type="Label" parent="PC/VBC/TopBar"]
margin_top = 3.0
margin_right = 865.0
margin_bottom = 17.0
size_flags_horizontal = 3

[node name="UpButton" type="Button" parent="PC/VBC/TopBar"]
margin_left = 869.0
margin_right = 899.0
margin_bottom = 20.0
text = "Up"

[node name="DownButton" type="Button" parent="PC/VBC/TopBar"]
margin_left = 903.0
margin_right = 951.0
margin_bottom = 20.0
text = "Down"

[node name="Delete" type="Button" parent="PC/VBC/TopBar"]
margin_left = 955.0
margin_right = 1010.0
margin_bottom = 20.0
text = "Delete"

[node name="HSeparator" type="HSeparator" parent="PC/VBC"]
margin_top = 24.0
margin_right = 1010.0
margin_bottom = 28.0

[node name="MainContainer" type="PanelContainer" parent="PC/VBC"]
margin_top = 32.0
margin_right = 1010.0
margin_bottom = 46.0

[node name="AddButton" type="Button" parent="."]
margin_top = 64.0
margin_right = 1024.0
margin_bottom = 84.0
text = "Add Here"
